--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -9,13 +9,15 @@
 /* Wrapper */
 
 	
-		#wrapper {
-			background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/images/cities.png");
-			background-size: cover;
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-attachment: fixed;
-		}
+	#wrapper {
+		background-color: #212931;
+		background-image: url("https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/images/cities.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/images/cities.png");
+		background-size: cover, auto, 100% auto;
+		background-position: center, center, top center;
+		background-repeat: no-repeat, no-repeat, no-repeat;
+		background-attachment: fixed, fixed, fixed;
+	}
+
 		
 
 		#wrapper.fade-in:before {
