--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -10,7 +10,7 @@
 
 	
 	#wrapper {
-		background-color: #212931;
+		/*background-color: #212931;*/
 		background-image: url("https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/images/cities.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/images/cities.png");
 		background-size: cover, auto, 100% auto;
 		background-position: center, center, top center;
